Fixed cell spacing & background position

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ input.input_submit_large{padding:22px;}
 
 #body_header{
 	width:100%;
-	height:80px;
+	height:90px;
 	margin:0px 0px 5px;
 }
 	#obj_logo{
@@ -171,6 +171,7 @@ input.input_submit_large{padding:22px;}
 		height:80px;
 		float:left;
 		background:url(../imgs/logo-crystal.png);
+        background-position:0px -6px;
 	}
 	#obj_user_login{
 		width:350px;
